Attempt to fix the overflowing of the entire page when first load in

--- a/id-creator/src/component/CardMakerComponents/CardMakerFooter/CardMakerFooter.css
+++ b/id-creator/src/component/CardMakerComponents/CardMakerFooter/CardMakerFooter.css
@@ -4,7 +4,8 @@
     background-color: var(--red-brown);
     display: flex;
     justify-content: end;
-    border-top: 1px solid var(--brown-pale)
+    border-top: 1px solid var(--brown-pale);
+    min-height: 23px;
 }
 
 .card-maker-footer-component{
