--- a/id-creator/src/component/util/Layout/HeaderLayout.css
+++ b/id-creator/src/component/util/Layout/HeaderLayout.css
@@ -1,11 +1,11 @@
 .site-layout{
     display: flex;
     flex-flow: column;
+    min-height: 100vh;
 }
 
 .site-header{
     padding: 4px var(--padding-layout-width);
-    flex: 1;
     background-color: var(--red-brown);
     border-bottom: 1px solid var(--brown-pale);
     box-sizing: border-box;
@@ -16,10 +16,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex:1 1 45px;
 }
 
 .site-header-content{
-    max-width: var(--layout-max-width);
     width: 100%;
 }
 
@@ -28,9 +28,6 @@
     width: 35px;
     height: 35px;
     display: none;
-}
-
-.nav-button{
 }
 
 .site-content{
